# partial-sign-language

./: .gitignore  .replit  README.md  app.py  pyproject.toml
.streamlit/: config.toml
assets/: gesture_svgs.py
data/: dataset_loader.py  gesture_labels.py
models/: cnn_model.py  gesture_recognition.py  lstm_model.py  rule_based_classifier.py
scripts/: evaluate_cnn.py  evaluate_lstm.py  preprocess_dataset.py  test_realtime.py  train_cnn.py  train_lstm.py
utils/: hand_tracking.py  mediapipe_processor.py  nlp_cleanup.py  speech_audio_processor.py  speech_processing.py  video_processing.py
